# servicenow_rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
definitions/base/: washington.json  xanadu.json  yokohama.json
docs/: ai-agent-guide.md  developer-guide.md  task-sla-spec.md
docs/superpowers/plans/: 2026-05-07-task-sla-crate-handoff.md
docs/verification/: task_sla_dictionary_yokohama.json
src/: client.rs  config.rs  error.rs  lib.rs  prefix.rs
src/api/: aggregate.rs  approval.rs  attachment.rs  catalog.rs  graphql.rs  mod.rs  table.rs
src/auth/: basic.rs  mod.rs  token.rs
src/model/: attachment.rs  journal.rs  mod.rs  record.rs  result.rs  sla.rs  value.rs
src/query/: batch.rs  builder.rs  filter.rs  mod.rs  paginator.rs  strategy.rs
src/schema/: definition.rs  loader.rs  mod.rs  registry.rs  relationships.rs
src/transport/: graphql.rs  http.rs  mod.rs  response.rs  retry.rs
tests/: integration_test.rs  live_readonly_test.rs
