[package]
name = "servicenow_rs"
version = "0.5.0"
edition = "2021"
description = "A Rust library for the ServiceNow REST API"
license = "MIT"
repository = "https://github.com/trepidity/servicenow_rs"

[dependencies]
reqwest = { version = "0.13.3", default-features = false, features = ["cookies", "json", "query", "charset", "http2", "system-proxy"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
async-trait = "0.1.89"
thiserror = "2.0.18"
tracing = "0.1.44"
url = "2.5.8"
base64 = "0.22.1"
futures = "0.3.32"
chrono = "0.4.44"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full", "test-util"] }
wiremock = "0.6.5"
tempfile = "3.27.0"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
